--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.5.0",
     "popper.js": "^1.16.1",
+    "scrollreveal": "^4.0.9",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
